--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 
+
+
+
+
+
+
 .grandparent {
     background-color: hsl(0,50%,50%);
     width: 100%;
@@ -6,7 +12,7 @@
     padding: 2%;
     margin: auto;
     border: 10px solid blue;
-   
+    display: flex;
     
 }
 .parent {
